@@ -1,3 +1,9 @@
+2011-05-07  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/viewport.jl: add window-on-current-head-viewport
+
+	* lisp/sawfish/wm/edge/tile.jl: one-shot-try to make tile
+	xinerama-aware
+
 2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits
 
